# SUQA-CORE-POC

./: .gitignore  Makefile.am  README.md  configure.ac
.github/: PULL_REQUEST_TEMPLATE.md
contrib/gitian-descriptors/: gitian-linux.yml  gitian-win.yml
contrib/macdeploy/: background.tiff  custom_dsstore.py  fancy.plist  macdeployqtplus  macdeployqtplus.py
contrib/package/: ubuntu-x64.sh
doc/: build-osx.md  build-windows.md
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  amount.cpp  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  hash.h  init.cpp  key.cpp  leveldbwrapper.h  main.cpp  main.h  miner.cpp  net.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcmining.cpp  rpcmisc.cpp  rpcrawtransaction.cpp  rpcserver.cpp  rpcserver.h  serialize.h  timedata.cpp  txdb.cpp  txdb.h  txmempool.cpp  (+6 more)
src/algo/: hashx22i.h
src/consensus/: consensus.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  coincontroldialog.cpp  depositcoinsdialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  networkstyle.cpp  openuridialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  paymentserver.h  recentrequeststablemodel.h  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  utilitydialog.cpp  walletmodel.cpp  walletview.cpp
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  depositcoinsdialog.ui  editaddressdialog.ui  helpmessagedialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  transactiondescdialog.ui  ui_addressbookpage.h  ui_askpassphrasedialog.h  ui_coincontroldialog.h  ui_depositcoinsdialog.h  ui_editaddressdialog.h  ui_helpmessagedialog.h  ui_intro.h  ui_openuridialog.h  ui_optionsdialog.h  ui_overviewpage.h  ui_receivecoinsdialog.h  ui_receiverequestdialog.h  ui_rpcconsole.h  ui_sendcoinsdialog.h  ui_sendcoinsentry.h  ui_signverifymessagedialog.h  ui_transactiondescdialog.h
src/qt/locale/: bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_et.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_ko_KR.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_nb.ts  bitcoin_nl.ts  bitcoin_pam.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_ru.ts  (+9 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/css/: suqa.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp
src/script/: script.cpp  script.h
src/univalue/: univalue.h
src/wallet/: rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h
src/zmq/: zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h
